exports[`hooks-order > invalid(1): import {after, before} from 'node:test';\nclass A {\n\tstatic {\n\t\tafter(() => {});\n\t\tbefore(() => {});\n\t}\n} 1`] = `

  1 | import {after, before} from 'node:test';
  2 | class A {
  3 | 	static {
  4 | 		after(() => {});
  5 | 		before(() => {});
  6 | 	}
  7 | }

`;

exports[`hooks-order > invalid(1): import {after, before} from 'node:test';\nclass A {\n\tstatic {\n\t\tafter(() => {});\n\t\tbefore(() => {});\n\t}\n} 2`] = `

Message:
  1 | import {after, before} from 'node:test';
  2 | class A {
  3 | 	static {
  4 | 		after(() => {});
> 5 | 		before(() => {});
    | 		^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.
  6 | 	}
  7 | }

Output:
  1 | import {after, before} from 'node:test';
  2 | class A {
  3 | 	static {
  4 | 		before(() => {});
  5 | 		after(() => {});
  6 | 	}
  7 | }

`;

exports[`hooks-order > invalid(10): import test, {before, after} from 'node:test';\nafter(() => {});\nbefore(() => {}); 1`] = `

  1 | import test, {before, after} from 'node:test';
  2 | after(() => {});
  3 | before(() => {});

`;

exports[`hooks-order > invalid(10): import test, {before, after} from 'node:test';\nafter(() => {});\nbefore(() => {}); 2`] = `

Message:
  1 | import test, {before, after} from 'node:test';
  2 | after(() => {});
> 3 | before(() => {});
    | ^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.

Output:
  1 | import test, {before, after} from 'node:test';
  2 | before(() => {});
  3 | after(() => {});

`;

exports[`hooks-order > invalid(11): import test, {before, afterEach} from 'node:test';\nafterEach(() => {});\nbefore(() => {}); 1`] = `

  1 | import test, {before, afterEach} from 'node:test';
  2 | afterEach(() => {});
  3 | before(() => {});

`;

exports[`hooks-order > invalid(11): import test, {before, afterEach} from 'node:test';\nafterEach(() => {});\nbefore(() => {}); 2`] = `

Message:
  1 | import test, {before, afterEach} from 'node:test';
  2 | afterEach(() => {});
> 3 | before(() => {});
    | ^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`afterEach\`.

Output:
  1 | import test, {before, afterEach} from 'node:test';
  2 | before(() => {});
  3 | afterEach(() => {});

`;

exports[`hooks-order > invalid(12): import test, {beforeEach, afterEach} from 'node:test';\nafterEach(() => {});\nbeforeEach(() => {}); 1`] = `

  1 | import test, {beforeEach, afterEach} from 'node:test';
  2 | afterEach(() => {});
  3 | beforeEach(() => {});

`;

exports[`hooks-order > invalid(12): import test, {beforeEach, afterEach} from 'node:test';\nafterEach(() => {});\nbeforeEach(() => {}); 2`] = `

Message:
  1 | import test, {beforeEach, afterEach} from 'node:test';
  2 | afterEach(() => {});
> 3 | beforeEach(() => {});
    | ^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` must come before \`afterEach\`.

Output:
  1 | import test, {beforeEach, afterEach} from 'node:test';
  2 | beforeEach(() => {});
  3 | afterEach(() => {});

`;

exports[`hooks-order > invalid(13): import test, {beforeEach, after} from 'node:test';\nafter(() => {});\nbeforeEach(() => {}); 1`] = `

  1 | import test, {beforeEach, after} from 'node:test';
  2 | after(() => {});
  3 | beforeEach(() => {});

`;

exports[`hooks-order > invalid(13): import test, {beforeEach, after} from 'node:test';\nafter(() => {});\nbeforeEach(() => {}); 2`] = `

Message:
  1 | import test, {beforeEach, after} from 'node:test';
  2 | after(() => {});
> 3 | beforeEach(() => {});
    | ^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` must come before \`after\`.

Output:
  1 | import test, {beforeEach, after} from 'node:test';
  2 | beforeEach(() => {});
  3 | after(() => {});

`;

exports[`hooks-order > invalid(14): import test, {before, beforeEach, after} from 'node:test';\nbefore(() => {});\nafter(() => {});\nbeforeEach(() => {});\ntest(\"a\", () => {}); 1`] = `

  1 | import test, {before, beforeEach, after} from 'node:test';
  2 | before(() => {});
  3 | after(() => {});
  4 | beforeEach(() => {});
  5 | test("a", () => {});

`;

exports[`hooks-order > invalid(14): import test, {before, beforeEach, after} from 'node:test';\nbefore(() => {});\nafter(() => {});\nbeforeEach(() => {});\ntest(\"a\", () => {}); 2`] = `

Message:
  1 | import test, {before, beforeEach, after} from 'node:test';
  2 | before(() => {});
  3 | after(() => {});
> 4 | beforeEach(() => {});
    | ^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` must come before \`after\`.
  5 | test("a", () => {});

Output:
  1 | import test, {before, beforeEach, after} from 'node:test';
  2 | before(() => {});
  3 | beforeEach(() => {});
  4 | after(() => {});
  5 | test("a", () => {});

`;

exports[`hooks-order > invalid(15): import {before as b, after as a} from \"node:test\";\na(() => {});\nb(() => {}); 1`] = `

  1 | import {before as b, after as a} from "node:test";
  2 | a(() => {});
  3 | b(() => {});

`;

exports[`hooks-order > invalid(15): import {before as b, after as a} from \"node:test\";\na(() => {});\nb(() => {}); 2`] = `

Message:
  1 | import {before as b, after as a} from "node:test";
  2 | a(() => {});
> 3 | b(() => {});
    | ^^^^^^^^^^^ Hook \`before\` must come before \`after\`.

Output:
  1 | import {before as b, after as a} from "node:test";
  2 | b(() => {});
  3 | a(() => {});

`;

exports[`hooks-order > invalid(16): import * as nodeTest from \"node:test\";\nnodeTest.after(() => {});\nnodeTest.before(() => {}); 1`] = `

  1 | import * as nodeTest from "node:test";
  2 | nodeTest.after(() => {});
  3 | nodeTest.before(() => {});

`;

exports[`hooks-order > invalid(16): import * as nodeTest from \"node:test\";\nnodeTest.after(() => {});\nnodeTest.before(() => {}); 2`] = `

Message:
  1 | import * as nodeTest from "node:test";
  2 | nodeTest.after(() => {});
> 3 | nodeTest.before(() => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.

Output:
  1 | import * as nodeTest from "node:test";
  2 | nodeTest.before(() => {});
  3 | nodeTest.after(() => {});

`;

exports[`hooks-order > invalid(17): import test, {before, after} from 'node:test';\nafter(() => {});\nconsole.log(\"side effect\");\nbefore(() => {}); 1`] = `

  1 | import test, {before, after} from 'node:test';
  2 | after(() => {});
  3 | console.log("side effect");
  4 | before(() => {});

`;

exports[`hooks-order > invalid(17): import test, {before, after} from 'node:test';\nafter(() => {});\nconsole.log(\"side effect\");\nbefore(() => {}); 2`] = `

Message:
  1 | import test, {before, after} from 'node:test';
  2 | after(() => {});
  3 | console.log("side effect");
> 4 | before(() => {});
    | ^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.

`;

exports[`hooks-order > invalid(18): import test, {before, after} from 'node:test';\nafter(() => {});\n// setup\nbefore(() => {}); 1`] = `

  1 | import test, {before, after} from 'node:test';
  2 | after(() => {});
  3 | // setup
  4 | before(() => {});

`;

exports[`hooks-order > invalid(18): import test, {before, after} from 'node:test';\nafter(() => {});\n// setup\nbefore(() => {}); 2`] = `

Message:
  1 | import test, {before, after} from 'node:test';
  2 | after(() => {});
  3 | // setup
> 4 | before(() => {});
    | ^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.

`;

exports[`hooks-order > invalid(19): import test, {before, after} from 'node:test';\nafter(() => {});\nbefore(() => {}); // comment 1`] = `

  1 | import test, {before, after} from 'node:test';
  2 | after(() => {});
  3 | before(() => {}); // comment

`;

exports[`hooks-order > invalid(19): import test, {before, after} from 'node:test';\nafter(() => {});\nbefore(() => {}); // comment 2`] = `

Message:
  1 | import test, {before, after} from 'node:test';
  2 | after(() => {});
> 3 | before(() => {}); // comment
    | ^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.

`;

exports[`hooks-order > invalid(2): import {afterEach, before} from 'node:test';\nswitch (value) {\n\tcase 1:\n\t\tafterEach(() => {});\n\t\tbefore(() => {});\n\t\tbreak;\n} 1`] = `

  1 | import {afterEach, before} from 'node:test';
  2 | switch (value) {
  3 | 	case 1:
  4 | 		afterEach(() => {});
  5 | 		before(() => {});
  6 | 		break;
  7 | }

`;

exports[`hooks-order > invalid(2): import {afterEach, before} from 'node:test';\nswitch (value) {\n\tcase 1:\n\t\tafterEach(() => {});\n\t\tbefore(() => {});\n\t\tbreak;\n} 2`] = `

Message:
  1 | import {afterEach, before} from 'node:test';
  2 | switch (value) {
  3 | 	case 1:
  4 | 		afterEach(() => {});
> 5 | 		before(() => {});
    | 		^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`afterEach\`.
  6 | 		break;
  7 | }

Output:
  1 | import {afterEach, before} from 'node:test';
  2 | switch (value) {
  3 | 	case 1:
  4 | 		before(() => {});
  5 | 		afterEach(() => {});
  6 | 		break;
  7 | }

`;

exports[`hooks-order > invalid(20): import test, {before, after} from 'node:test';\n// teardown\nafter(() => {});\nbefore(() => {}); 1`] = `

  1 | import test, {before, after} from 'node:test';
  2 | // teardown
  3 | after(() => {});
  4 | before(() => {});

`;

exports[`hooks-order > invalid(20): import test, {before, after} from 'node:test';\n// teardown\nafter(() => {});\nbefore(() => {}); 2`] = `

Message:
  1 | import test, {before, after} from 'node:test';
  2 | // teardown
  3 | after(() => {});
> 4 | before(() => {});
    | ^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.

`;

exports[`hooks-order > invalid(21): import test, {before, after} from 'node:test';\n/* teardown */\nafter(() => {});\nbefore(() => {}); 1`] = `

  1 | import test, {before, after} from 'node:test';
  2 | /* teardown */
  3 | after(() => {});
  4 | before(() => {});

`;

exports[`hooks-order > invalid(21): import test, {before, after} from 'node:test';\n/* teardown */\nafter(() => {});\nbefore(() => {}); 2`] = `

Message:
  1 | import test, {before, after} from 'node:test';
  2 | /* teardown */
  3 | after(() => {});
> 4 | before(() => {});
    | ^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.

`;

exports[`hooks-order > invalid(22): import test, {before, after} from 'node:test';\n/* teardown */ after(() => {});\nbefore(() => {}); 1`] = `

  1 | import test, {before, after} from 'node:test';
  2 | /* teardown */ after(() => {});
  3 | before(() => {});

`;

exports[`hooks-order > invalid(22): import test, {before, after} from 'node:test';\n/* teardown */ after(() => {});\nbefore(() => {}); 2`] = `

Message:
  1 | import test, {before, after} from 'node:test';
  2 | /* teardown */ after(() => {});
> 3 | before(() => {});
    | ^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.

`;

exports[`hooks-order > invalid(23): import test, {before, after} from 'node:test';\n// file header\n\nafter(() => {});\nbefore(() => {}); 1`] = `

  1 | import test, {before, after} from 'node:test';
  2 | // file header
  3 |
  4 | after(() => {});
  5 | before(() => {});

`;

exports[`hooks-order > invalid(23): import test, {before, after} from 'node:test';\n// file header\n\nafter(() => {});\nbefore(() => {}); 2`] = `

Message:
  1 | import test, {before, after} from 'node:test';
  2 | // file header
  3 |
  4 | after(() => {});
> 5 | before(() => {});
    | ^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.

Output:
  1 | import test, {before, after} from 'node:test';
  2 | // file header
  3 |
  4 | before(() => {});
  5 | after(() => {});

`;

exports[`hooks-order > invalid(24): import test, {describe, before, after} from 'node:test';\ndescribe(\"s\", () => {\n\tafter(() => {});\n\tbefore(() => {});\n}); 1`] = `

  1 | import test, {describe, before, after} from 'node:test';
  2 | describe("s", () => {
  3 | 	after(() => {});
  4 | 	before(() => {});
  5 | });

`;

exports[`hooks-order > invalid(24): import test, {describe, before, after} from 'node:test';\ndescribe(\"s\", () => {\n\tafter(() => {});\n\tbefore(() => {});\n}); 2`] = `

Message:
  1 | import test, {describe, before, after} from 'node:test';
  2 | describe("s", () => {
  3 | 	after(() => {});
> 4 | 	before(() => {});
    | 	^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.
  5 | });

Output:
  1 | import test, {describe, before, after} from 'node:test';
  2 | describe("s", () => {
  3 | 	before(() => {});
  4 | 	after(() => {});
  5 | });

`;

exports[`hooks-order > invalid(25): import test, {before, beforeEach, afterEach, after} from 'node:test';\nafter(() => {});\nafterEach(() => {});\nbeforeEach(() => {});\nbefore(() => {}); 1`] = `

  1 | import test, {before, beforeEach, afterEach, after} from 'node:test';
  2 | after(() => {});
  3 | afterEach(() => {});
  4 | beforeEach(() => {});
  5 | before(() => {});

`;

exports[`hooks-order > invalid(25): import test, {before, beforeEach, afterEach, after} from 'node:test';\nafter(() => {});\nafterEach(() => {});\nbeforeEach(() => {});\nbefore(() => {}); 2`] = `

Message:
  1 | import test, {before, beforeEach, afterEach, after} from 'node:test';
  2 | after(() => {});
> 3 | afterEach(() => {});
    | ^^^^^^^^^^^^^^^^^^^ Hook \`afterEach\` must come before \`after\`.
  4 | beforeEach(() => {});
  5 | before(() => {});

Output:
  1 | import test, {before, beforeEach, afterEach, after} from 'node:test';
  2 | before(() => {});
  3 | beforeEach(() => {});
  4 | afterEach(() => {});
  5 | after(() => {});

`;

exports[`hooks-order > invalid(25): import test, {before, beforeEach, afterEach, after} from 'node:test';\nafter(() => {});\nafterEach(() => {});\nbeforeEach(() => {});\nbefore(() => {}); 3`] = `

Message:
  1 | import test, {before, beforeEach, afterEach, after} from 'node:test';
  2 | after(() => {});
  3 | afterEach(() => {});
> 4 | beforeEach(() => {});
    | ^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` must come before \`after\`.
  5 | before(() => {});

Output:
  1 | import test, {before, beforeEach, afterEach, after} from 'node:test';
  2 | before(() => {});
  3 | beforeEach(() => {});
  4 | afterEach(() => {});
  5 | after(() => {});

`;

exports[`hooks-order > invalid(25): import test, {before, beforeEach, afterEach, after} from 'node:test';\nafter(() => {});\nafterEach(() => {});\nbeforeEach(() => {});\nbefore(() => {}); 4`] = `

Message:
  1 | import test, {before, beforeEach, afterEach, after} from 'node:test';
  2 | after(() => {});
  3 | afterEach(() => {});
  4 | beforeEach(() => {});
> 5 | before(() => {});
    | ^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.

Output:
  1 | import test, {before, beforeEach, afterEach, after} from 'node:test';
  2 | before(() => {});
  3 | beforeEach(() => {});
  4 | afterEach(() => {});
  5 | after(() => {});

`;

exports[`hooks-order > invalid(26): import test, {describe, before, after} from 'node:test';\ndescribe(\"a\", () => {\n\tafter(() => {});\n\tbefore(() => {});\n});\ndescribe(\"b\", () => {\n\tafter(() => {});\n\tbefore(() => {});\n}); 1`] = `

  1 | import test, {describe, before, after} from 'node:test';
  2 | describe("a", () => {
  3 | 	after(() => {});
  4 | 	before(() => {});
  5 | });
  6 | describe("b", () => {
  7 | 	after(() => {});
  8 | 	before(() => {});
  9 | });

`;

exports[`hooks-order > invalid(26): import test, {describe, before, after} from 'node:test';\ndescribe(\"a\", () => {\n\tafter(() => {});\n\tbefore(() => {});\n});\ndescribe(\"b\", () => {\n\tafter(() => {});\n\tbefore(() => {});\n}); 2`] = `

Message:
  1 | import test, {describe, before, after} from 'node:test';
  2 | describe("a", () => {
  3 | 	after(() => {});
> 4 | 	before(() => {});
    | 	^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.
  5 | });
  6 | describe("b", () => {
  7 | 	after(() => {});
  8 | 	before(() => {});
  9 | });

Output:
  1 | import test, {describe, before, after} from 'node:test';
  2 | describe("a", () => {
  3 | 	before(() => {});
  4 | 	after(() => {});
  5 | });
  6 | describe("b", () => {
  7 | 	after(() => {});
  8 | 	before(() => {});
  9 | });

`;

exports[`hooks-order > invalid(26): import test, {describe, before, after} from 'node:test';\ndescribe(\"a\", () => {\n\tafter(() => {});\n\tbefore(() => {});\n});\ndescribe(\"b\", () => {\n\tafter(() => {});\n\tbefore(() => {});\n}); 3`] = `

Message:
  1 | import test, {describe, before, after} from 'node:test';
  2 | describe("a", () => {
  3 | 	after(() => {});
  4 | 	before(() => {});
  5 | });
  6 | describe("b", () => {
  7 | 	after(() => {});
> 8 | 	before(() => {});
    | 	^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.
  9 | });

Output:
  1 | import test, {describe, before, after} from 'node:test';
  2 | describe("a", () => {
  3 | 	after(() => {});
  4 | 	before(() => {});
  5 | });
  6 | describe("b", () => {
  7 | 	before(() => {});
  8 | 	after(() => {});
  9 | });

`;

exports[`hooks-order > invalid(27): import test, {before, after} from 'node:test';\nafter(() => {}) as void;\nbefore(() => {}) as void; 1`] = `

  1 | import test, {before, after} from 'node:test';
  2 | after(() => {}) as void;
  3 | before(() => {}) as void;

`;

exports[`hooks-order > invalid(27): import test, {before, after} from 'node:test';\nafter(() => {}) as void;\nbefore(() => {}) as void; 2`] = `

Message:
  1 | import test, {before, after} from 'node:test';
  2 | after(() => {}) as void;
> 3 | before(() => {}) as void;
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.

Output:
  1 | import test, {before, after} from 'node:test';
  2 | before(() => {}) as void;
  3 | after(() => {}) as void;

`;

exports[`hooks-order > invalid(28): import {test} from 'node:test';\ntest('p', t => { t.afterEach(() => {}); t.beforeEach(() => {}); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('p', t => { t.afterEach(() => {}); t.beforeEach(() => {}); });

`;

exports[`hooks-order > invalid(28): import {test} from 'node:test';\ntest('p', t => { t.afterEach(() => {}); t.beforeEach(() => {}); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('p', t => { t.afterEach(() => {}); t.beforeEach(() => {}); });
    |                                         ^^^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` must come before \`afterEach\`.

Output:
  1 | import {test} from 'node:test';
  2 | test('p', t => { t.beforeEach(() => {}); t.afterEach(() => {}); });

`;

exports[`hooks-order > invalid(29): import {test, getTestContext} from 'node:test';\ntest('p', t => { getTestContext().afterEach(() => {}); getTestContext().beforeEach(() => {}); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('p', t => { getTestContext().afterEach(() => {}); getTestContext().beforeEach(() => {}); });

`;

exports[`hooks-order > invalid(29): import {test, getTestContext} from 'node:test';\ntest('p', t => { getTestContext().afterEach(() => {}); getTestContext().beforeEach(() => {}); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('p', t => { getTestContext().afterEach(() => {}); getTestContext().beforeEach(() => {}); });
    |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` must come before \`afterEach\`.

Output:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('p', t => { getTestContext().beforeEach(() => {}); getTestContext().afterEach(() => {}); });

`;

exports[`hooks-order > invalid(3): import {after, before} from 'node:test';\nswitch (value) {\n\tcase 1: {\n\t\tafter(() => {});\n\t\tbefore(() => {});\n\t}\n} 1`] = `

  1 | import {after, before} from 'node:test';
  2 | switch (value) {
  3 | 	case 1: {
  4 | 		after(() => {});
  5 | 		before(() => {});
  6 | 	}
  7 | }

`;

exports[`hooks-order > invalid(3): import {after, before} from 'node:test';\nswitch (value) {\n\tcase 1: {\n\t\tafter(() => {});\n\t\tbefore(() => {});\n\t}\n} 2`] = `

Message:
  1 | import {after, before} from 'node:test';
  2 | switch (value) {
  3 | 	case 1: {
  4 | 		after(() => {});
> 5 | 		before(() => {});
    | 		^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.
  6 | 	}
  7 | }

Output:
  1 | import {after, before} from 'node:test';
  2 | switch (value) {
  3 | 	case 1: {
  4 | 		before(() => {});
  5 | 		after(() => {});
  6 | 	}
  7 | }

`;

exports[`hooks-order > invalid(30): import {test} from 'node:test';\ntest('p', t => { if (ready) { t.afterEach(() => {}); t.beforeEach(() => {}); } }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('p', t => { if (ready) { t.afterEach(() => {}); t.beforeEach(() => {}); } });

`;

exports[`hooks-order > invalid(30): import {test} from 'node:test';\ntest('p', t => { if (ready) { t.afterEach(() => {}); t.beforeEach(() => {}); } }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('p', t => { if (ready) { t.afterEach(() => {}); t.beforeEach(() => {}); } });
    |                                                      ^^^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` must come before \`afterEach\`.

Output:
  1 | import {test} from 'node:test';
  2 | test('p', t => { if (ready) { t.beforeEach(() => {}); t.afterEach(() => {}); } });

`;

exports[`hooks-order > invalid(31): import {before, afterEach, test} from 'node:test';\n\n(afterEach(() => {}))\nbefore(() => {})\n\ntest('a', () => {}); 1`] = `

  1 | import {before, afterEach, test} from 'node:test';
  2 |
  3 | (afterEach(() => {}))
  4 | before(() => {})
  5 |
  6 | test('a', () => {});

`;

exports[`hooks-order > invalid(31): import {before, afterEach, test} from 'node:test';\n\n(afterEach(() => {}))\nbefore(() => {})\n\ntest('a', () => {}); 2`] = `

Message:
  1 | import {before, afterEach, test} from 'node:test';
  2 |
  3 | (afterEach(() => {}))
> 4 | before(() => {})
    | ^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`afterEach\`.
  5 |
  6 | test('a', () => {});

Output:
  1 | import {before, afterEach, test} from 'node:test';
  2 |
  3 | before(() => {});
  4 | ;(afterEach(() => {}))
  5 |
  6 | test('a', () => {});

`;

exports[`hooks-order > invalid(32): import {before, after} from 'node:test';\nconst value = []\nafter(() => {});\n(before(() => {})); 1`] = `

  1 | import {before, after} from 'node:test';
  2 | const value = []
  3 | after(() => {});
  4 | (before(() => {}));

`;

exports[`hooks-order > invalid(32): import {before, after} from 'node:test';\nconst value = []\nafter(() => {});\n(before(() => {})); 2`] = `

Message:
  1 | import {before, after} from 'node:test';
  2 | const value = []
  3 | after(() => {});
> 4 | (before(() => {}));
    |  ^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.

Output:
  1 | import {before, after} from 'node:test';
  2 | const value = []
  3 | ;(before(() => {}));
  4 | after(() => {});

`;

exports[`hooks-order > invalid(33): import {after, before, beforeEach} from 'node:test';\n\nafter(() => {})\nbefore(() => {});\nbeforeEach(() => {});\n(async () => {\n\tawait Promise.resolve();\n})(); 1`] = `

  1 | import {after, before, beforeEach} from 'node:test';
  2 |
  3 | after(() => {})
  4 | before(() => {});
  5 | beforeEach(() => {});
  6 | (async () => {
  7 | 	await Promise.resolve();
  8 | })();

`;

exports[`hooks-order > invalid(33): import {after, before, beforeEach} from 'node:test';\n\nafter(() => {})\nbefore(() => {});\nbeforeEach(() => {});\n(async () => {\n\tawait Promise.resolve();\n})(); 2`] = `

Message:
  1 | import {after, before, beforeEach} from 'node:test';
  2 |
  3 | after(() => {})
> 4 | before(() => {});
    | ^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.
  5 | beforeEach(() => {});
  6 | (async () => {
  7 | 	await Promise.resolve();
  8 | })();

Output:
  1 | import {after, before, beforeEach} from 'node:test';
  2 |
  3 | before(() => {});
  4 | beforeEach(() => {});
  5 | after(() => {});
  6 | (async () => {
  7 | 	await Promise.resolve();
  8 | })();

`;

exports[`hooks-order > invalid(33): import {after, before, beforeEach} from 'node:test';\n\nafter(() => {})\nbefore(() => {});\nbeforeEach(() => {});\n(async () => {\n\tawait Promise.resolve();\n})(); 3`] = `

Message:
  1 | import {after, before, beforeEach} from 'node:test';
  2 |
  3 | after(() => {})
  4 | before(() => {});
> 5 | beforeEach(() => {});
    | ^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` must come before \`after\`.
  6 | (async () => {
  7 | 	await Promise.resolve();
  8 | })();

Output:
  1 | import {after, before, beforeEach} from 'node:test';
  2 |
  3 | before(() => {});
  4 | beforeEach(() => {});
  5 | after(() => {});
  6 | (async () => {
  7 | 	await Promise.resolve();
  8 | })();

`;

exports[`hooks-order > invalid(34): import {after, before} from 'node:test';\n\nafter(() => {})\nbefore(() => {});\n[1].forEach(f); 1`] = `

  1 | import {after, before} from 'node:test';
  2 |
  3 | after(() => {})
  4 | before(() => {});
  5 | [1].forEach(f);

`;

exports[`hooks-order > invalid(34): import {after, before} from 'node:test';\n\nafter(() => {})\nbefore(() => {});\n[1].forEach(f); 2`] = `

Message:
  1 | import {after, before} from 'node:test';
  2 |
  3 | after(() => {})
> 4 | before(() => {});
    | ^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.
  5 | [1].forEach(f);

Output:
  1 | import {after, before} from 'node:test';
  2 |
  3 | before(() => {});
  4 | after(() => {});
  5 | [1].forEach(f);

`;

exports[`hooks-order > invalid(4): import test, {after, afterEach, beforeEach, before} from 'node:test';\nswitch (value) {\n\tcase 1:\n\t\tafter(() => {});\n\t\tafterEach(() => {});\n\t\tbeforeEach(() => {});\n\t\tbefore(() => {});\n} 1`] = `

  1 | import test, {after, afterEach, beforeEach, before} from 'node:test';
  2 | switch (value) {
  3 | 	case 1:
  4 | 		after(() => {});
  5 | 		afterEach(() => {});
  6 | 		beforeEach(() => {});
  7 | 		before(() => {});
  8 | }

`;

exports[`hooks-order > invalid(4): import test, {after, afterEach, beforeEach, before} from 'node:test';\nswitch (value) {\n\tcase 1:\n\t\tafter(() => {});\n\t\tafterEach(() => {});\n\t\tbeforeEach(() => {});\n\t\tbefore(() => {});\n} 2`] = `

Message:
  1 | import test, {after, afterEach, beforeEach, before} from 'node:test';
  2 | switch (value) {
  3 | 	case 1:
  4 | 		after(() => {});
> 5 | 		afterEach(() => {});
    | 		^^^^^^^^^^^^^^^^^^^ Hook \`afterEach\` must come before \`after\`.
  6 | 		beforeEach(() => {});
  7 | 		before(() => {});
  8 | }

Output:
  1 | import test, {after, afterEach, beforeEach, before} from 'node:test';
  2 | switch (value) {
  3 | 	case 1:
  4 | 		before(() => {});
  5 | 		beforeEach(() => {});
  6 | 		afterEach(() => {});
  7 | 		after(() => {});
  8 | }

`;

exports[`hooks-order > invalid(4): import test, {after, afterEach, beforeEach, before} from 'node:test';\nswitch (value) {\n\tcase 1:\n\t\tafter(() => {});\n\t\tafterEach(() => {});\n\t\tbeforeEach(() => {});\n\t\tbefore(() => {});\n} 3`] = `

Message:
  1 | import test, {after, afterEach, beforeEach, before} from 'node:test';
  2 | switch (value) {
  3 | 	case 1:
  4 | 		after(() => {});
  5 | 		afterEach(() => {});
> 6 | 		beforeEach(() => {});
    | 		^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` must come before \`after\`.
  7 | 		before(() => {});
  8 | }

Output:
  1 | import test, {after, afterEach, beforeEach, before} from 'node:test';
  2 | switch (value) {
  3 | 	case 1:
  4 | 		before(() => {});
  5 | 		beforeEach(() => {});
  6 | 		afterEach(() => {});
  7 | 		after(() => {});
  8 | }

`;

exports[`hooks-order > invalid(4): import test, {after, afterEach, beforeEach, before} from 'node:test';\nswitch (value) {\n\tcase 1:\n\t\tafter(() => {});\n\t\tafterEach(() => {});\n\t\tbeforeEach(() => {});\n\t\tbefore(() => {});\n} 4`] = `

Message:
  1 | import test, {after, afterEach, beforeEach, before} from 'node:test';
  2 | switch (value) {
  3 | 	case 1:
  4 | 		after(() => {});
  5 | 		afterEach(() => {});
  6 | 		beforeEach(() => {});
> 7 | 		before(() => {});
    | 		^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.
  8 | }

Output:
  1 | import test, {after, afterEach, beforeEach, before} from 'node:test';
  2 | switch (value) {
  3 | 	case 1:
  4 | 		before(() => {});
  5 | 		beforeEach(() => {});
  6 | 		afterEach(() => {});
  7 | 		after(() => {});
  8 | }

`;

exports[`hooks-order > invalid(5): import {after, before} from 'node:test';\nclass A {\n\tstatic {\n\t\tafter(() => {});\n\t\twork();\n\t\tbefore(() => {});\n\t}\n} 1`] = `

  1 | import {after, before} from 'node:test';
  2 | class A {
  3 | 	static {
  4 | 		after(() => {});
  5 | 		work();
  6 | 		before(() => {});
  7 | 	}
  8 | }

`;

exports[`hooks-order > invalid(5): import {after, before} from 'node:test';\nclass A {\n\tstatic {\n\t\tafter(() => {});\n\t\twork();\n\t\tbefore(() => {});\n\t}\n} 2`] = `

Message:
  1 | import {after, before} from 'node:test';
  2 | class A {
  3 | 	static {
  4 | 		after(() => {});
  5 | 		work();
> 6 | 		before(() => {});
    | 		^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.
  7 | 	}
  8 | }

`;

exports[`hooks-order > invalid(6): import {before, after} from 'node:test';\nif (ready) {\n\tafter(() => {});\n\tbefore(() => {});\n} 1`] = `

  1 | import {before, after} from 'node:test';
  2 | if (ready) {
  3 | 	after(() => {});
  4 | 	before(() => {});
  5 | }

`;

exports[`hooks-order > invalid(6): import {before, after} from 'node:test';\nif (ready) {\n\tafter(() => {});\n\tbefore(() => {});\n} 2`] = `

Message:
  1 | import {before, after} from 'node:test';
  2 | if (ready) {
  3 | 	after(() => {});
> 4 | 	before(() => {});
    | 	^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.
  5 | }

Output:
  1 | import {before, after} from 'node:test';
  2 | if (ready) {
  3 | 	before(() => {});
  4 | 	after(() => {});
  5 | }

`;

exports[`hooks-order > invalid(7): import {before, after} from 'node:test';\nfor (const item of items) {\n\tafter(() => {});\n\tbefore(() => {});\n} 1`] = `

  1 | import {before, after} from 'node:test';
  2 | for (const item of items) {
  3 | 	after(() => {});
  4 | 	before(() => {});
  5 | }

`;

exports[`hooks-order > invalid(7): import {before, after} from 'node:test';\nfor (const item of items) {\n\tafter(() => {});\n\tbefore(() => {});\n} 2`] = `

Message:
  1 | import {before, after} from 'node:test';
  2 | for (const item of items) {
  3 | 	after(() => {});
> 4 | 	before(() => {});
    | 	^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.
  5 | }

Output:
  1 | import {before, after} from 'node:test';
  2 | for (const item of items) {
  3 | 	before(() => {});
  4 | 	after(() => {});
  5 | }

`;

exports[`hooks-order > invalid(8): import {before, after} from 'node:test';\nfunction register() {\n\tafter(() => {});\n\tbefore(() => {});\n} 1`] = `

  1 | import {before, after} from 'node:test';
  2 | function register() {
  3 | 	after(() => {});
  4 | 	before(() => {});
  5 | }

`;

exports[`hooks-order > invalid(8): import {before, after} from 'node:test';\nfunction register() {\n\tafter(() => {});\n\tbefore(() => {});\n} 2`] = `

Message:
  1 | import {before, after} from 'node:test';
  2 | function register() {
  3 | 	after(() => {});
> 4 | 	before(() => {});
    | 	^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.
  5 | }

Output:
  1 | import {before, after} from 'node:test';
  2 | function register() {
  3 | 	before(() => {});
  4 | 	after(() => {});
  5 | }

`;

exports[`hooks-order > invalid(9): import {before, after} from 'node:test';\nbefore(() => {});\nafter(() => {});\nbefore(() => {}); 1`] = `

  1 | import {before, after} from 'node:test';
  2 | before(() => {});
  3 | after(() => {});
  4 | before(() => {});

`;

exports[`hooks-order > invalid(9): import {before, after} from 'node:test';\nbefore(() => {});\nafter(() => {});\nbefore(() => {}); 2`] = `

Message:
  1 | import {before, after} from 'node:test';
  2 | before(() => {});
  3 | after(() => {});
> 4 | before(() => {});
    | ^^^^^^^^^^^^^^^^ Hook \`before\` must come before \`after\`.

Output:
  1 | import {before, after} from 'node:test';
  2 | before(() => {});
  3 | before(() => {});
  4 | after(() => {});

`;
